Fix spacing and styling of buttons and other nav
- remove borders of left nav buttons
- increase font size of Space and Cosmos
- Move NYT logo to the left by givng it a left and right margins
- Put some padding on left and right of main nav

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,14 +1,57 @@
+* {
+    border: 1px solid lightblue;
+}
+
 /*Basic Styles*/
 html,
 body {
-  color: #121;
+    color: #121;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Nav Styles */
-
 .nav-main {
-  display: inline;
+    padding: 10px 10px 1px 10px;
 }
+
+.nav-main section {
+    display: inline;
+}
+
+
+
 .nav-brand img {
-  width: 200px;
+    /* width: 200px; */
+    height: 28px;
+    margin: 0 350px;
+}
+
+.left-nav-menu {
+    position: relative;
+    bottom: 10px;
+}
+
+
+.left-nav-menu button {
+    border: none;
+    background-color: #fff;
+    outline: none;
+    padding: 10px;
+    border-radius: 2px;
+}
+
+.left-nav-menu button:hover {
+    background-color: lightgrey;
+    cursor: pointer;
+}
+
+.left-nav-menu a {
+    text-decoration: none;
+    color: #121;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.left-nav-menu a:hover {
+    text-decoration: underline;
 }
